Spring 3.x / Jedis 4.x / Java 17 Upgrade (#160)
* build: upgrade to Java 17

* feature: Spring 3.x upgrade

* dependencies: update to match Spring v3.0.2

* release: v7.0.0 - Spring 3.x - Java 17

* Use JDK 17 on Github integration workflow

* Use JDK 17 on Github codeql workflow

* upgrade CodeQL to v2

* refactor: use framework GSon instance for typed MGET

* refactor: clean up tests

* refactor: make UnifiedJedis instance private to RedisModulesClient

Co-authored-by: maor.ohana <maor.ohana@redis.com>